# agentic-ai-solutions

00_agentic_ai/: README.md
00_agentic_ai/diff_llm_samples/: README.md
00_agentic_ai/diff_llm_samples/mistral_agent/: .env  .gitignore  README.md  pyproject.toml
00_agentic_ai/diff_llm_samples/mistral_agent/src/mistral_agent/: __init__.py  main.py
01_openai_api/: README.md
01_openai_api/chat_completion_002/: config.py  hello.py  pyproject.toml
01_openai_api/chat_completion_api/: pyproject.toml
01_openai_api/chat_completion_api/src/chat_completion_api/: __init__.py  basic_prompt.py  basic_prompt_roles.py  chatbot.py  image_input.py  prompts.txt  simple_agent.py  state_mgmt_in_com.py  state_mgmt_in_responses.py  streaming_text.py  tools.py
