[project]
name = "mistral-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sohail Ahmed", email = "sohahmed.c@stc.com.sa" }
]
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.8",
    "openai-agents>=0.0.12",
]

[project.scripts]
mistral-agent = "mistral_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
